[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twitter-fetch"
version = "0.1.0"
description = "Simplified Twitter/X data fetcher — cookie auth via args/env only, no browser extraction"
requires-python = ">=3.8"

# Adapted from https://github.com/jackwener/twitter-cli
# Stripped to core fetch logic; removed browser-cookie3, rich, PyYAML, click.
# Auth is passed directly (auth_token + ct0) instead of auto-extracted from browser.
dependencies = []

[project.scripts]
twitter-fetch = "scripts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
